--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>MobileNet</title>
+        <title>Google lens Vs. Mobile Net</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -10,24 +10,157 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/webcamjs/1.0.26/webcam.js"></script>
 
     <link rel="stylesheet" type="text/css" href="style.css">
+    <h1>Google lens Vs. Mobile Net</h1>
     </head>
     <body>
         <ol>
             <div class="text_images_and_results">
                 <li>
-                    <b>Test image - </b><img src="" class="img-responsive">
+                    <b>Test image - </b><img src="balloon.jpg" class="img-responsive">
                 </li>
-                    <h5>output on<b>GOOGLE LENS</b>
-                        <span></span>
+                    <h5>output on<b> GOOGLE LENS</b>
+                        <span>"balloon"</span>
                     </h5>
-                    <h5>output on <b>Mobile</b>
-                        <span>"Bottle"</span>
+                    <h5>output on <b>Mobilenet</b>
+                        <span>"balloon"</span>
                     </h5>
                     <div class="bob3">
-                        <h4>Result for "water bottle"- </h4>
+                        <h4>Result for "balloon"- </h4>
+                        <h4>Both of them had the same output, so there is a tie between Google lens model and the mobilenet model.</h4>
                         <hr>
-                        <h4>Both of them had the same output, so there is a tie between micrsoft azure model and the mobilenet model.</h4>
-                    </div>       
+                    </div>
+                    <li>
+                        <b>Test image - </b><img src="bed.jpg" class="img-responsive">
+                    </li>
+                        <h5>output on<b> GOOGLE LENS</b>
+                            <span>"bed"</span>
+                        </h5>
+                        <h5>output on <b>Mobilenet</b>
+                            <span>"furniture"</span>
+                        </h5>
+                        <div class="bob3">
+                            <h4>Result for "bed"- </h4>
+                            <h4>Google lens had the most accurate answer, so in this case, Google Lens is better.</h4>
+                            <hr>
+                        </div>
+                        <li>
+                            <b>Test image - </b><img src="boombox.jpg" class="img-responsive">
+                        </li>
+                            <h5>output on<b> GOOGLE LENS</b>
+                                <span>"boombox"</span>
+                            </h5>
+                            <h5>output on <b>Mobilenet</b>
+                                <span>"electronics"</span>
+                            </h5>
+                            <div class="bob3">
+                                <h4>Result for "boombox"- </h4>
+                                <h4>Google lens had the most accurate answer, so in this case, Google Lens is better.</h4>
+                                <hr>
+                            </div> 
+                            <li>
+                                <b>Test image - </b><img src="cd.png" class="img-responsive">
+                            </li>
+                                <h5>output on<b>GOOGLE LENS</b>
+                                    <span>"DVD"</span>
+                                </h5>
+                                <h5>output on <b>Mobilenet</b>
+                                    <span>"DVD"</span>
+                                </h5>
+                                <div class="bob3">
+                                    <h4>Result for "DVD"- </h4>
+                                    <h4>Both of them had the same output, so there is a tie between Google lens model and the mobilenet model.</h4>
+                                    <hr>
+                                </div>    
+           <li>
+             <b>Test image - </b><img src="hanger.jpg" class="img-responsive">
+            </li>
+            <h5>output on<b> GOOGLE LENS</b>
+                <span>"Hanger"</span>
+            </h5>
+            <h5>output on <b>Mobilenet</b>
+                 <span>"Hanger"</span>
+            </h5>
+            <div class="bob3">
+                <h4>Result for "Hanger"- </h4>
+                <h4>Both of them had the same output, so there is a tie between Google lens model and the mobilenet model.</h4>
+                <hr>
+         </div>
+             <li>
+                <b>Test image - </b><img src="magnifying glass.jpg" class="img-responsive">
+            </li>
+                <h5>output on<b> GOOGLE LENS</b>
+                    <span>"magnifying glass"</span>
+                </h5>
+                <h5>output on <b>Mobilenet</b>
+                    <span>"Magnifying glass"</span>
+                </h5>
+                <div class="bob3">
+                    <h4>Result for "Magnifying glass"- </h4>
+                    <h4>Both of them had the same output, so there is a tie between Google lens model and the mobilenet model.</h4>
+                    <hr>
+            </div> 
+            <li>
+                <b>Test image - </b><img src="table.jpg" class="img-responsive">
+            </li>
+                <h5>output on<b> GOOGLE LENS</b>
+                    <span>"Table"</span>
+                </h5>
+                <h5>output on <b>Mobilenet</b>
+                    <span>"Table"</span>
+                </h5>
+                <div class="bob3">
+                    <h4>Result for "Table"- </h4>
+                    <h4>Both of them had the same output, so there is a tie between Google lens model and the mobilenet model.</h4>
+                    <hr>
+            </div>
+            <li>
+                <b>Test image - </b><img src="tire.jpg" class="img-responsive">
+            </li>
+                <h5>output on<b> GOOGLE LENS</b>
+                    <span>"Tire"</span>
+                </h5>
+                <h5>output on <b>Mobilenet</b>
+                    <span>"Tire"</span>
+                </h5>
+                <div class="bob3">
+                    <h4>Result for "Tire"- </h4>
+                    <h4>Both of them had the same output, so there is a tie between Google lens model and the mobilenet model.</h4>
+                    <hr>
+           </div>
+        </div> 
+        <li>
+            <b>Test image - </b><img src="umbrella.jpg" class="img-responsive">
+       </li>
+            <h5>output on<b> GOOGLE LENS</b>
+                <span>"Umbrella"</span>
+            </h5>
+            <h5>output on <b>Mobilenet</b>
+                <span>"Lamp"</span>
+            </h5>
+            <div class="bob3">
+                <h4>Result for "Umbrella"- </h4>
+                <h4>Google lens had the most accurate answer, so in this case, Google Lens is better.</h4>
+                <hr>
+        </div>
+        <li>
+            <b>Test image - </b><img src="watch.jpg" class="img-responsive">
+       </li>
+            <h5>output on<b> GOOGLE LENS</b>
+                <span>"wristwatch"</span>
+            </h5>
+            <h5>output on <b>Mobilenet</b>
+                <span>"wristwatch"</span>
+            </h5>
+            <div class="bob3">
+                <h4>Result for "wristwatch"- </h4>
+                <h4>Both of them had the same output, so there is a tie between Google lens model and the mobilenet model.</h4>
+                <hr>
+        </div>
+        <hr>
+        <div>
+            <h1>Conclusion- </h1>
+            <h3>I tested 10 images. Google lens predicted all ten of them accurately. Mobile net only predicted 7 of them accurately. Therefore, I conclude that Google lens is more accurate.</h3>
+        </div>  
         </ol>
     </body>
 </html>
